feat(infra): adição do compose e configs de deploy