@@ -4,8 +4,8 @@ import org.springframework.boot.CommandLineRunner;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Component;
 
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 
 @Component
 public class DatabaseSeeder implements CommandLineRunner {
@@ -18,7 +18,16 @@ public class DatabaseSeeder implements CommandLineRunner {
 
     @Override
     public void run(String... args) throws Exception {
-        String sql = new String(Files.readAllBytes(Paths.get("src/main/resources/seed.sql")));
+        InputStream is = getClass()
+                .getClassLoader()
+                .getResourceAsStream("seed.sql");
+
+        if (is == null) {
+            throw new IllegalStateException("seed.sql não encontrada");
+        }
+
+        String sql = new String(is.readAllBytes(), StandardCharsets.UTF_8);
+
         for (String statement : sql.split(";")) {
             if (!statement.trim().isEmpty()) {
                 jdbcTemplate.execute(statement);
